fix:兼容ios生成主屏幕图标

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,11 @@
     "icons":[
         {
             "src":"./image/logo.jpeg",
+            "sizes":"512x512",
+            "type": "image/png"
+        },
+        {
+            "src":"./image/logo.jpeg",
             "sizes":"192x192",
             "type": "image/png"
         },
