--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name":"点触科技",
-    "short_name":"点触",
+    "short_name":"点触dc",
     "start_url":".",
     "background_color": "blue",
     "theme_color": "yellow",
