feat:ios的首屏动画

--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,33 @@
 {
-    "name":"点触科技",
-    "short_name":"点触dc",
-    "start_url":".",
+    "name": "点触科技",
+    "short_name": "点触dc",
+    "start_url": ".",
     "background_color": "blue",
-    "theme_color": "yellow",
-    "display":"standalone",
-    "icons":[
-        {
-            "src":"./image/logo.png",
-            "sizes":"512x512",
+    "theme_color": "skyblue",
+    "display": "standalone",
+    "icons": [{
+            "src": "./image/logo.png",
+            "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src":"./image/logo.png",
-            "sizes":"192x192",
+            "src": "./image/logo.png",
+            "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src":"./image/logo.png",
-            "sizes":"144x144",
+            "src": "./image/logo.png",
+            "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src":"./image/logo.png",
-            "sizes":"128x128",
+            "src": "./image/logo.png",
+            "sizes": "128x128",
             "type": "image/png"
         },
         {
-            "src":"./image/logo.png",
-            "sizes":"57x57",
+            "src": "./image/logo.png",
+            "sizes": "57x57",
             "type": "image/png"
         }
     ]
