--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name": "点触科技",
     "short_name": "点触dc",
     "start_url": ".",
-    "background_color": "blue",
-    "theme_color": "skyblue",
+    "background_color": "rgb(11, 196, 149)",
+    "theme_color": "rgb(11, 196, 149)",
     "display": "standalone",
     "icons": [{
             "src": "./image/logo.png",
